Add JWT, Auth, Updating services controllers etc